syntax = "proto3";
package com.vima.gateway;

import "Shared.proto";

message ReserveRelationship{
    string userId = 1;
    string accomId = 2;
}

message RateRelationship{
    string userId = 1;
    string accomId = 2;
    int32 value = 3;
}

service RecommendationService{
    rpc createUserNode(Uuid) returns (Empty);
    rpc createAccomNode(Uuid) returns (Empty);
    rpc createReserveRel(ReserveRelationship) returns (Empty);
    rpc createRateRel(RateRelationship) returns (Empty);
}