syntax = "proto3";
option java_multiple_files = true;
package com.vima.gateway;

import "google/protobuf/timestamp.proto";

enum Status{
  PENDING = 0;
  ACCEPTED = 1;
  DECLINED = 2;
}

message uuid{
  string value = 1;
}

message empty{}

message AccommodationInfo{
  string accomId = 1;
  int32 minGuests = 2;
  int32 maxGuests = 3;
  string city = 4;
  string country = 5;
}

message DateRange{
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}

message ReservationRequest{
  int32 numOfGuests  = 1;
  DateRange desiredDate = 2;
  AccommodationInfo accommodationInfo = 3;
  string userId = 4;
}

message ReservationResponse{
  uuid id = 1;
  int32 numOfGuests = 2;
  Status status = 3;
  AccommodationInfo accomInfo = 4;
  DateRange desiredDate = 5;
  string userId = 6;
}

message ReservationList{
  repeated ReservationResponse retList = 1;
}

service ReservationService{
  rpc create(ReservationRequest) returns (ReservationResponse);
  rpc findAll(empty) returns (ReservationList);
  rpc findById(uuid) returns (ReservationResponse);
}