syntax = "proto3";
option java_multiple_files = true;
package com.vima.gateway;

import "google/protobuf/timestamp.proto";

message Uuid {
  string value = 1;
}

message TextMessage{
  string value = 1;
}

message Empty {}

message DateRange {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}